--- a/CFG/deberta-v3-base_V1.yaml
+++ b/CFG/deberta-v3-base_V1.yaml
@@ -149,7 +149,12 @@ val_loader:
   num_workers: 4
   pin_memory: true
   shuffle: false
-
+test_loader:
+  batch_size: 16
+  drop_last: false
+  num_workers: 1
+  pin_memory: true
+  shuffle: false
 #===========================
 # trainer
 # max_norm : 
