--- a/CFG/deberta-v3-base_noprompt.yaml
+++ b/CFG/deberta-v3-base_noprompt.yaml
@@ -33,40 +33,84 @@ data:
   prepare:
     prompt_max_len: 512
     add_question: false
-    experiment: true
+    experiment: false
     experiment_rate: 0.5
   dataset:
     pool_question: false
+    pool_middle_sep: false
     target_cols: ['content', 'wording']
     text_max_len : 512
     prompt_text_max_len: 1024
 
 
+
+
+selected_folds: [0]
+
 #===========================
 # model
-# params:act[relu6,sigmoid]
+transform_target: false
+multiloss: true
+split_n_components: 1
+
 #===========================
-selected_folds: [0]
-UseCusLoss: false
-model:
-  loss: CommonLitLoss
-  loss_reduction: mean
-  sub_loss: RMSELoss
-  use_weights: true
-  sub_loss_param:
+#losses a,b,c ==> losses.split(",")
+# CommonLitLoss
+# CommonLitCRMSELoss
+# CommonLitHuber 
+# GaussianNLLLoss
+# SmoothL1Loss
+
+loss:
+  losses: SmoothL1Loss
+  CommonLitLoss:
+    loss_name: RMSELoss
+    loss_param:
+      beta: 1
+      eps: 0.000001
     reduction: none
-  max_len: 1024
-  max_len_eval: 1024
+    weights:  [0.55,0.45]
+  CommonLitCRMSELoss:
+    loss_name: CRMSELoss
+    loss_param:
+      eps: 0.000001
+    reduction: none
+    weights:  [0.55,0.45]
+  CommonLitHuber:
+    loss_name: SmoothL1HuberLoss
+    loss_param:
+      beta: 1
+      reduction: mean
+    reduction: none
+    weights: [0.55,0.45]
+
+  GaussianNLLLoss:
+    eps: 0.000001
+    reduction: mean
+  SmoothL1Loss:
+    reduction: mean
+    beta: 1
+
+model:
+  target_cols : ['content', 'wording']
+
+  # ====================================
+  # max_len: 544
+  # max_len_eval: 1024
+  # ====================================
+  # model params
   params:
+    # use_mdn: false
     span_pool: false
     add_prompt: false
     gradient_checkpointing: true
-    multilfc: false
+    # multilfc: false
     multilpool: false
     activation: none
     freezing: 4
     REINIT_LAYERS: 0
     init_head: true
+    headname: bndense_01
     config_path:
   CrosenEoderPara:
     mask_flag : false
@@ -77,77 +121,99 @@ model:
     downConvPara : {}
   CrosAttPara:
     mask_flag : false
-    d_model: 762
-    d_ff: 762
+    d_model: 768
+    d_ff: 768
     n_heads: 8
     factor: 20
     dropout: 0.1
     attType: prob
     activation: relu
   CrosConvPara:
-    c_in: 762
-    d_model: 762
+    c_in: 768
+    d_model: 768
     kernel_size: 5
   pooling_params :
-    pooling_name: MeanPooling
+    pooling_name: MeanPoolingA
     params : {}
   spans_pooling_params :
     pooling_name : AttentionHead
     params : {}
   spans: ''
-  target_cols : ['content', 'wording']
-  target_weights :
-    avg : [0.5, 0.5]
-    wtd : [0.55, 0.45]
+  # ====================================
 
 #===========================
 # optimizer
 # LLDR : <1. if(LLDR=1) means no lldr
 #===========================
-# torch adamw
-# optim.AdamW
+# torchAdamW
+# transformersAdamW
 #===========================
 # Debiasing Omission In BertADAM
 # Adamw
 #===========================
+ignore_head: false
+AGC:
+ clipping: 0.005
+ eps: 0.000001
 
-
+lambda_l1: 0.0
 optimizer:
-  name : AdamW
-  LR: 0.00005
-  LLDR: 0.8
-  HeadLR: 0.00005
-  params : 
-    lr: 0.00005
+  name : transformersAdamW
+  LLDR: 0.9
+  HeadLR: 0.00002
+  torchAdamW : 
+    lr: 0.00002
     betas: [0.9, 0.999]
     eps: 0.000001
     weight_decay: 0.01
-  tparams : 
-    lr: 0.00005
+  transformersAdamW : 
+    lr: 0.00002
     eps: 0.000001
+    betas: [0.9, 0.999]
     weight_decay: 0.01
-    correct_bias: true
+    correct_bias: false
+
+
 
 #===========================
 # scheduler
 # poly,linear,cosine,OneCycleLR
+# poly:get_polynomial_decay_schedule_with_warmup
+# linear:get_linear_schedule_with_warmup
+# cosine:get_cosine_schedule_with_warmup
+# OneCycleLR:OneCycleLR
 #===========================
-
 
 scheduler:
   name: cosine
-  params : 
+  getter: get_cosine_schedule_with_warmup
+  warmup: 0.0
+  # ===================
+  # parameters
+  poly : 
     lr_end: 0.0000007
     power: 3
-  warmup: 0.1
+  linear:
+    last_epoch: -1
+  cosine:
+    num_cycles: 0.5
+  onecycle:
+    max_lr: 0.00002
+    pct_start: 0.0
+
+  
 
 #===========================
 # train_loader
 #===========================
 
-
+# ======================
+# sampler
+# StratifiedSampler
+# RandomSampler
+Sampler: noo
 train_loader:
-  batch_size: 1
+  batch_size: 32
   drop_last: true
   num_workers: 4
   pin_memory: true
@@ -159,11 +225,12 @@ train_loader:
 
 
 val_loader:
-  batch_size: 1
+  batch_size: 64
   drop_last: false
   num_workers: 4
   pin_memory: true
   shuffle: false
+  drop_last: false
 
 test_loader:
   batch_size: 16
@@ -180,16 +247,19 @@ test_loader:
 #   experiment :10*batch_size 
 #===========================
 
-verbose: 0
+USE_ADAM_AGC: false
+use_adaptive_clip: false
+verbose: 1
 trainer:
+  HEADTrain: false
+  INITFromHead: false
   gradient_accumulation_steps: 1
   use_accumulation: true
   use_amp: true
   epochs: 4
-  sample: true
   gradient_checkpointing: true
   grad_clip: true
-  max_norm: 10000
+  max_norm: 1000
 
 
 
@@ -208,9 +278,9 @@ trainer:
 # =========================================================
 
 start_eval_step: 0.5
-eval_steps: 0.2
-evaluation_strategy: steps
-es_strategy: half
+eval_steps: 0.1
+evaluation_strategy: epoch
+es_strategy: epochs
 do_inference: false
 do_train: true
 MAXIMIZE: false
@@ -221,7 +291,7 @@ callbacks:
   steploss : 
     tqdm : true
     nprint : 3 
-  metric_track: val_loss
+  metric_track: valloss
   mode: min
   top_k: 1
   start_eval_epoch : 0
